control/plasma_df90.F90


      interface
         function PLASMA_dgecon_Tile_c(norm,A,anorm,rcond) &
          & bind(c, name='PLASMA_dgecon_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dgecon_Tile_c
            integer(kind=c_int), value :: norm
            type(c_ptr), value :: A
            real(kind=c_double), value :: anorm
            type(c_ptr), value :: rcond
          end function PLASMA_dgecon_Tile_c
      end interface

      interface
         function PLASMA_dgelqf_Tile_c(A,T) &
          & bind(c, name='PLASMA_dgelqf_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dgelqf_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: T
          end function PLASMA_dgelqf_Tile_c
      end interface

      interface
         function PLASMA_dgelqs_Tile_c(A,T,B) &
          & bind(c, name='PLASMA_dgelqs_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dgelqs_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: T
            type(c_ptr), value :: B
          end function PLASMA_dgelqs_Tile_c
      end interface

      interface
         function PLASMA_dgels_Tile_c(trans,A,T,B) &
          & bind(c, name='PLASMA_dgels_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dgels_Tile_c
            integer(kind=c_int), value :: trans
            type(c_ptr), value :: A
            type(c_ptr), value :: T
            type(c_ptr), value :: B
          end function PLASMA_dgels_Tile_c
      end interface

      interface
         function PLASMA_dgemm_Tile_c(transA,transB,alpha,A,B,beta,C) &
          & bind(c, name='PLASMA_dgemm_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dgemm_Tile_c
            integer(kind=c_int), value :: transA
            integer(kind=c_int), value :: transB
            real(kind=c_double), value :: alpha
            type(c_ptr), value :: A
            type(c_ptr), value :: B
            real(kind=c_double), value :: beta
            type(c_ptr), value :: C
          end function PLASMA_dgemm_Tile_c
      end interface

      interface
         function PLASMA_dgeqp3_Tile_c(A,jpvt,tau,work,rwork) &
          & bind(c, name='PLASMA_dgeqp3_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dgeqp3_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: jpvt
            type(c_ptr), value :: tau
            type(c_ptr), value :: work
            type(c_ptr), value :: rwork
          end function PLASMA_dgeqp3_Tile_c
      end interface

      interface
         function PLASMA_dgeqrf_Tile_c(A,T) &
          & bind(c, name='PLASMA_dgeqrf_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dgeqrf_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: T
          end function PLASMA_dgeqrf_Tile_c
      end interface

      interface
         function PLASMA_dgeqrs_Tile_c(A,T,B) &
          & bind(c, name='PLASMA_dgeqrs_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dgeqrs_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: T
            type(c_ptr), value :: B
          end function PLASMA_dgeqrs_Tile_c
      end interface

      interface
         function PLASMA_dgesdd_Tile_c(jobu,jobvt,A,S,T,U,LDU,VT,LDVT) &
          & bind(c, name='PLASMA_dgesdd_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dgesdd_Tile_c
            integer(kind=c_int), value :: jobu
            integer(kind=c_int), value :: jobvt
            type(c_ptr), value :: A
            type(c_ptr), value :: S
            type(c_ptr), value :: T
            type(c_ptr), value :: U
            integer(kind=c_int), value :: LDU
            type(c_ptr), value :: VT
            integer(kind=c_int), value :: LDVT
          end function PLASMA_dgesdd_Tile_c
      end interface

      interface
         function PLASMA_dgesv_Tile_c(A,IPIV,B) &
          & bind(c, name='PLASMA_dgesv_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dgesv_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: IPIV
            type(c_ptr), value :: B
          end function PLASMA_dgesv_Tile_c
      end interface

      interface
         function PLASMA_dgesv_incpiv_Tile_c(A,L,IPIV,B) &
          & bind(c, name='PLASMA_dgesv_incpiv_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dgesv_incpiv_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: L
            type(c_ptr), value :: IPIV
            type(c_ptr), value :: B
          end function PLASMA_dgesv_incpiv_Tile_c
      end interface

      interface
         function PLASMA_dgesvd_Tile_c(jobu,jobvt,A,S,T,U,LDU,VT,LDVT) &
          & bind(c, name='PLASMA_dgesvd_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dgesvd_Tile_c
            integer(kind=c_int), value :: jobu
            integer(kind=c_int), value :: jobvt
            type(c_ptr), value :: A
            type(c_ptr), value :: S
            type(c_ptr), value :: T
            type(c_ptr), value :: U
            integer(kind=c_int), value :: LDU
            type(c_ptr), value :: VT
            integer(kind=c_int), value :: LDVT
          end function PLASMA_dgesvd_Tile_c
      end interface

      interface
         function PLASMA_dgetrf_Tile_c(A,IPIV) &
          & bind(c, name='PLASMA_dgetrf_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dgetrf_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: IPIV
          end function PLASMA_dgetrf_Tile_c
      end interface

      interface
         function PLASMA_dgetrf_incpiv_Tile_c(A,L,IPIV) &
          & bind(c, name='PLASMA_dgetrf_incpiv_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dgetrf_incpiv_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: L
            type(c_ptr), value :: IPIV
          end function PLASMA_dgetrf_incpiv_Tile_c
      end interface

      interface
         function PLASMA_dgetrf_nopiv_Tile_c(A) &
          & bind(c, name='PLASMA_dgetrf_nopiv_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dgetrf_nopiv_Tile_c
            type(c_ptr), value :: A
          end function PLASMA_dgetrf_nopiv_Tile_c
      end interface

      interface
         function PLASMA_dgetrf_tntpiv_Tile_c(A,IPIV) &
          & bind(c, name='PLASMA_dgetrf_tntpiv_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dgetrf_tntpiv_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: IPIV
          end function PLASMA_dgetrf_tntpiv_Tile_c
      end interface

      interface
         function PLASMA_dgetri_Tile_c(A,IPIV) &
          & bind(c, name='PLASMA_dgetri_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dgetri_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: IPIV
          end function PLASMA_dgetri_Tile_c
      end interface

      interface
         function PLASMA_dgetrs_Tile_c(trans,A,IPIV,B) &
          & bind(c, name='PLASMA_dgetrs_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dgetrs_Tile_c
            integer(kind=c_int), value :: trans
            type(c_ptr), value :: A
            type(c_ptr), value :: IPIV
            type(c_ptr), value :: B
          end function PLASMA_dgetrs_Tile_c
      end interface

      interface
         function PLASMA_dgetrs_incpiv_Tile_c(A,L,IPIV,B) &
          & bind(c, name='PLASMA_dgetrs_incpiv_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dgetrs_incpiv_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: L
            type(c_ptr), value :: IPIV
            type(c_ptr), value :: B
          end function PLASMA_dgetrs_incpiv_Tile_c
      end interface

      interface
         function PLASMA_dsyev_Tile_c(jobz,uplo,A,W,T,Q,LDQ) &
          & bind(c, name='PLASMA_dsyev_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dsyev_Tile_c
            integer(kind=c_int), value :: jobz
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: W
            type(c_ptr), value :: T
            type(c_ptr), value :: Q
            integer(kind=c_int), value :: LDQ
          end function PLASMA_dsyev_Tile_c
      end interface

      interface
         function PLASMA_dsyevd_Tile_c(jobz,uplo,A,W,T,Q,LDQ) &
          & bind(c, name='PLASMA_dsyevd_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dsyevd_Tile_c
            integer(kind=c_int), value :: jobz
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: W
            type(c_ptr), value :: T
            type(c_ptr), value :: Q
            integer(kind=c_int), value :: LDQ
          end function PLASMA_dsyevd_Tile_c
      end interface

      interface
         function PLASMA_dsyevr_Tile_c(jobz,range,uplo,A,vl,vu,il,iu,abstol,nbcomputedeig,W,T,Q,LDQ) &
          & bind(c, name='PLASMA_dsyevr_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dsyevr_Tile_c
            integer(kind=c_int), value :: jobz
            integer(kind=c_int), value :: range
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            real(kind=c_double), value :: vl
            real(kind=c_double), value :: vu
            integer(kind=c_int), value :: il
            integer(kind=c_int), value :: iu
            real(kind=c_double), value :: abstol
            type(c_ptr), value :: nbcomputedeig
            type(c_ptr), value :: W
            type(c_ptr), value :: T
            type(c_ptr), value :: Q
            integer(kind=c_int), value :: LDQ
          end function PLASMA_dsyevr_Tile_c
      end interface

      interface
         function PLASMA_dsygst_Tile_c(itype,uplo,A,B) &
          & bind(c, name='PLASMA_dsygst_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dsygst_Tile_c
            integer(kind=c_int), value :: itype
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: B
          end function PLASMA_dsygst_Tile_c
      end interface

      interface
         function PLASMA_dsygv_Tile_c(itype,jobz,uplo,A,B,W,T,Q) &
          & bind(c, name='PLASMA_dsygv_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dsygv_Tile_c
            integer(kind=c_int), value :: itype
            integer(kind=c_int), value :: jobz
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: B
            type(c_ptr), value :: W
            type(c_ptr), value :: T
            type(c_ptr), value :: Q
          end function PLASMA_dsygv_Tile_c
      end interface
